# Matching-Engine

./: CMakeLists.txt  README.md  build.sh  limit_order_book  main.cpp  test_order_book
include/: ConsoleRenderer.h  EngineWorker.h  MatchingEngine.h  Order.h  OrderBook.h  OrderProducer.h  ThreadSafeQueue.h  Trade.h
src/: ConsoleRenderer.cpp  EngineWorker.cpp  MatchingEngine.cpp  Order.cpp  OrderBook.cpp  OrderProducer.cpp
tests/: simple_tests.cpp
